force-app/main/default/objects/Peak_Checklist_Task__c.object
<CustomObject>
    <fields>
        <fullName>Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Complete?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Peak_Checklist__c</fullName>
        <label>Peak Checklist</label>
        <referenceTo>Peak_Checklist__c</referenceTo>
        <relationshipLabel>Checklist Tasks</relationshipLabel>
        <relationshipName>Peak_Checklist_Tasks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Peak Checklist Task</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Peak Checklist Tasks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>